--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="styles.css" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,7 +27,9 @@
 					<input type="text" placeholder="Some comment" />
 				</div>
 			</div>
-			<div class="postcard-footer"></div>
+			<div class="postcard-footer">
+				<button>Send My Postcard</button>
+			</div>
 		</div>
 	</body>
 </html>
